Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84981

HTML valign tag not processed properly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.15.1
    • 5.12, 5.13, 5.14, 5.15
    • GUI: Text handling
    • None
    • All
    • d28c625006c1b54fc3d39637a7b33e42fadb72a9 (qt/qtdeclarative/dev) d1b1fa52a2fded9691f6be5ee864b30adab0db2b (qt/qtdeclarative/5.15) e11939afee9b79127247d3b5ba0ce57b306a7dd6 (qt/qtbase/dev) 146374ccec4975a0fecf6d22e2bbe7014e6a60e3 (qt/qtbase/5.15)

    Description

      QML text with Text.RichText format does not properly process the valign tags.
      E.g. we have a table with text and a graphic in between with <img valign="middle"> that is displayed lower than with valign="bottom".
      It is expected that valign=top, middle, bottom are rendered like the HTML standard defines.

      Sample application provided to Dominik Holland <dominik.holland@qt.io>.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            eichbaum Uwe Eichbaum
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes