Fix the vertical alignment of images in a text document

Try to align with the HTML standard as much as possible.
AlignMiddle is between AlignTop and AlignBottom.

Fixes: QTBUG-84981
Pick-to: 5.15
Change-Id: Ie99aef0d09a6ece751883492748630526c4a1195
Reviewed-by: Lars Knoll <lars.knoll@qt.io>